<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/menu_home"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:iconTint="@color/colorPrimaryDark" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@mipmap/upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_ddo"
            android:icon="@mipmap/usera"
            android:title="@string/menu_ddo" />
        <item
            android:id="@+id/nav_ado"
            android:icon="@mipmap/userb"
            android:title="@string/menu_ado" />
        <item
            android:id="@+id/nav_location"
            android:icon="@mipmap/location"
            android:title="@string/menu_location" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
