<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_ado"
            android:icon="@drawable/ic_user"
            android:title="ADO LIST" />

        <item
            android:id="@+id/pending_item"
            android:icon="@drawable/arrow"
            android:title="@string/pending" />
        <item
            android:id="@+id/ongoing_item"
            android:icon="@drawable/arrow"
            android:title="@string/ongoing" />
        <item
            android:id="@+id/completed_item"
            android:icon="@drawable/arrow"
            android:title="@string/completed" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
